Fixed Alignment Issue on footer and changed participant info

--- a/history.css
+++ b/history.css
@@ -55,15 +55,18 @@ body{
 
 .footer{
     width: 100%;
-    height: 100px;
+    height: 120px;
+    background-color:rgb(19, 19, 19);
 }
 
 .footerInner li{
+    display: inline-grid;
+    margin: 30px;
     background-color:rgb(19, 19, 19);
     color:white;
     font-size: 25px;
-    padding: 5px;
-    padding-left: 20px;
+    padding: 15px;
+    float: left;
 }
 
 #content{
